# ethereum-watcher

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.sh  start_watcher.sh  stop_watcher.sh
app/: app.py
django/: circus.ini  manage.py  pytest.ini
django/project/: .env_dist  env_dist
django/project/app/: celery.py
django/project/app/blockchain_eth/: admin.py  apps.py  factories.py  generics.py  interfaces.py  managers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
django/project/app/blockchain_eth/migrations/: 0001_initial.py  0002_block_transactions_updated.py  0003_block_number.py  0004_transaction_type.py  0005_transaction_hash.py
django/project/app/blockchain_eth/tests/: test_models.py  test_services.py
django/project/app/config/: asgi.py  urls.py  wsgi.py
django/project/app/config/settings/: base.py
django/project/app/etherscan_app/: apis.py  factories.py  services.py
django/project/app/web_client/: urls.py  view.py
django/project/app/web_client/templates/web_client/: address_history.html  base.html  block_transactions.html  index.html  transaction_detail.html  transaction_detaill.html
docker/django/: .bashrc  Dockerfile
